[package]
name = "terraflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
    "dynamic_linking",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_audio",
    "jpeg",
    "wav",
] }
bevy_mod_picking = { version = "0.17.0", features = ["backend_egui"] }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
hexx = "0.12.0"
rand = "0.8.5"
bevy_egui = "0.24.0"
strum = "0.25.0"
strum_macros = "0.25.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
